// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info renders correctly 1`] = `""`;

exports[`Info renders correctly 2`] = `
<Fragment>
  <div
    className="lyrics"
    dangerouslySetInnerHTML={
      Object {
        "__html": "test",
      }
    }
  />
  <ul
    className="table"
  >
    <li
      className="table-row"
      key="title"
    >
      <span
        className="table-cell text-left bold"
      >
        Titel
        :
      </span>
      <span
        className="table-cell text-left"
      >
        test
      </span>
    </li>
    <li
      className="table-row"
      key="album"
    >
      <span
        className="table-cell text-left bold"
      >
        Album
        :
      </span>
      <span
        className="table-cell text-left"
      >
        <Component
          onClick={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "preventDefault": [MockFunction],
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          to="/audio/test/test"
        >
          test
        </Component>
      </span>
    </li>
    <li
      className="table-row"
      key="artist"
    >
      <span
        className="table-cell text-left bold"
      >
        Künstler
        :
      </span>
      <span
        className="table-cell text-left"
      >
        test
      </span>
    </li>
  </ul>
  <Component
    className="cover"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "preventDefault": [MockFunction],
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    to="/audio/test/test"
  >
    <Image
      alt="test"
      src="test"
    />
  </Component>
</Fragment>
`;

exports[`Info renders correctly after update 1`] = `
<Info
  closeLayers={[MockFunction]}
/>
`;

exports[`Info renders correctly after update 2`] = `
<Info
  activeTrack={
    Object {
      "album": Object {
        "id": "test",
        "imgPath": "test",
        "title": "test",
      },
      "artist": Object {
        "id": "test",
      },
      "path": "test",
      "tag": Object {
        "title": "test",
      },
    }
  }
  closeLayers={[MockFunction]}
>
  <ul
    className="table"
  >
    <li
      className="table-row"
      key="title"
    >
      <span
        className="table-cell text-left bold"
      >
        Titel
        :
      </span>
      <span
        className="table-cell text-left"
      >
        test
      </span>
    </li>
  </ul>
  <Component
    className="cover"
    onClick={[MockFunction]}
    to="/audio/test/test"
  >
    <div />
  </Component>
</Info>
`;
